# guitar-amp

./: .gitignore  CMakeLists.txt  README.md  USAGE.md  build.bat
Source/: Main.cpp  MainComponent.cpp  MainComponent.h
Source/DSP/: BiquadFilter.h  CabSim.h  GainStage.h  MasterVolume.h  NoiseGate.h  Phaser.h  PitchDetector.h  PowerMetalDistortion.h  PresenceFilter.h  Reverb.h  TapeDelay.h  ToneStack.h
